fix(styles): spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 * {
-  box-sizing: border-box !important;
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
@@ -21,7 +21,7 @@ code {
   margin-top: 10rem;
 }
 .mt-3 {
-  margin: 2rem 0;
+  padding-top: 40px;
 }
 .Button {
   color: rgb(156, 63, 63);
